@@ -1,3 +1,13 @@
+2011-05-05  Bharathwaaj Srinivasan  <bharathwaaj.s@gmail.com>
+
+        Reviewed by Holger Freyther.
+
+        Fix build-webkit --minimal.
+        https://bugs.webkit.org/show_bug.cgi?id=60257
+
+        * webkit/webkitglobals.cpp:
+        (webkitInit):
+
 2011-05-04  Ryosuke Niwa  <rniwa@webkit.org>
 
         GTK build fix attempt after r85823
